cmd/k8s-operator/my-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-2-deployment
  namespace: microseg
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:stable-bullseye # Replace this with your repository path.
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: my-nginx-2-svc
  namespace: microseg
spec:
  type: LoadBalancer
  loadBalancerClass: miranet
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
